# upa

./: .gitignore  Dockerfile  README.md  SECURITY.md  environment.yml  index.html  pyproject.toml  renovate.json  requirements.txt  upa.py
.github/: dependabot.yml
.github/workflows/: bandit.yml  codacy.yml  codeql.yml  docker-publish.yml  scorecard.yml
