[project]
name = "upa"
dependencies = ["apprise", "requests"]
requires-python = ">=3.10"
authors = [{ name = "Justin Settle" }]
description = "microplane alert reads data from tar1090, looks for interesting planes and sends notifications"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["adsb", "planealert"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"
